frontend/tests/cases/positive/instanceWithPredicateWhichPreventsOverlap-3.gr
interface Simple (n : Nat) (m : Nat)

instance {n<m} => Simple n m

-- this should not overlap with the previous instance
instance {m>n} => Simple n m
