frontend/tests/cases/negative/interfaces/kind-mismatch/kindMismatchBetweenInstanceConstraintAndInstanceParameter-02.gr
interface Simple (a : Type -> Type)

interface Simple2 (a : Type)

-- 'a' should have kind 'Type' for
-- Simple2, but 'Type -> Type' for Simple
instance {Simple a} => Simple2 a
